Fixed content stretching on several pages

--- a/app/assets/stylesheets/devise/change_password.scss
+++ b/app/assets/stylesheets/devise/change_password.scss
@@ -8,6 +8,7 @@
 
 #change-password-inner-div {
   width: 30%;
+  max-width: 555px;
 }
 
 #change-password-content-1 {
