--- a/app/assets/stylesheets/devise/edit_profile.scss
+++ b/app/assets/stylesheets/devise/edit_profile.scss
@@ -2,6 +2,7 @@
   border: 1px solid white;
   background-color: black;
   width: 45%;
+  max-width: 850px;
   margin: auto;
   margin-top: 90px;
   padding: 40px 50px 40px 50px;
