--- a/app/assets/stylesheets/devise/login_in.scss
+++ b/app/assets/stylesheets/devise/login_in.scss
@@ -1,6 +1,6 @@
 #login-container {
   height: 85vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,6 +8,7 @@
 
 #login-form-container {
   width: 25%;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
