--- a/app/assets/stylesheets/devise/new_password.scss
+++ b/app/assets/stylesheets/devise/new_password.scss
@@ -10,6 +10,7 @@
   border: 1px solid rgb(255, 255, 255);
   background-color: black;
   width: 22%;
+  max-width: 410px;
 }
 
 #fp-inner-div {
