--- a/app/assets/stylesheets/devise/sign_up.scss
+++ b/app/assets/stylesheets/devise/sign_up.scss
@@ -8,6 +8,7 @@
 
 #su-inner-div {
   width: 25%;
+  max-width: 470px;
 }
 
 #su-div {
