--- a/app/assets/stylesheets/messages/index.scss
+++ b/app/assets/stylesheets/messages/index.scss
@@ -1,6 +1,7 @@
 #messages-container {
   background-color: black;
   width: 50%;
+  max-width: 950px;
   margin: auto;
   margin-top: 70px;
 }
