--- a/app/assets/stylesheets/saved_posts/saved_posts.scss
+++ b/app/assets/stylesheets/saved_posts/saved_posts.scss
@@ -1,5 +1,6 @@
 #saved-p-container {
   width: 50%;
+  max-width: 950px;
   margin: auto;
   margin-top: 150px;
   display: grid;
