--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -1,4 +1,5 @@
 #user-index-container {
+  max-width: 930px;
   width: 50%;
   margin: auto;
   margin-top: 100px;
