--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -1,5 +1,6 @@
 #user-sh-container {
   padding-top: 40px;
+  max-width: 930px;
   width: 50%;
   margin: auto;
   margin-bottom: 100px;
